--- a/package.json
+++ b/package.json
@@ -1,69 +1,31 @@
 {
-  "_from": "git+https://github.com/ribuluo000/react-native-image-picker.git",
-  "_id": "react-native-image-picker@0.26.2",
+  "_from": "git+https://github.com/ribuluo000/IDCardRecognition.git",
+  "_id": "react-native-IDRecognition@0.0.1",
   "_inBundle": false,
   "_integrity": "sha1-Kx3YP7eQ/0sfmYx6CY7s7ltIk4o=",
-  "_location": "/react-native-image-picker",
+  "_location": "/react-native-IDRecognition",
   "_phantomChildren": {},
   "_requested": {
     "type": "git",
-    "raw": "react-native-image-picker@git+https://github.com/ribuluo000/react-native-image-picker.git",
-    "name": "react-native-image-picker",
-    "escapedName": "react-native-image-picker",
-    "rawSpec": "git+https://github.com/ribuluo000/react-native-image-picker.git",
-    "saveSpec": "git+https://github.com/ribuluo000/react-native-image-picker.git",
-    "fetchSpec": "https://github.com/ribuluo000/react-native-image-picker.git",
-    "gitCommittish": "master"
+    "raw": "react-native-IDCardRecognition@git+https://github.com/ribuluo000/IDCardRecognition.git",
+    "name": "react-native-IDCardRecognition",
+    "escapedName": "react-native-IDCardRecognition",
   },
-  "_requiredBy": [
-    "/"
-  ],
-  "_resolved": "git+https://github.com/ribuluo000/react-native-image-picker.git#3ac597a1fb71d067299e4432b4fd30ce8927798c",
-  "_spec": "react-native-image-picker@git+https://github.com/ribuluo000/react-native-image-picker.git",
-  "_where": "/Users/nick/Downloads/git/rnProject0710/youbaorn",
-  "author": {
-    "name": "Marc Shilling",
-    "url": "marcshilling"
-  },
-  "bugs": {
-    "url": "https://github.com/marcshilling/react-native-image-picker/issues"
-  },
-  "bundleDependencies": false,
-  "contributors": [
-    {
-      "name": "Matheus Santos",
-      "email": "vorj.dux@gmail.com"
-    },
-    {
-      "name": "Yoann Fuks",
-      "email": "yfuks@student.42.fr"
-    },
-    {
-      "name": "Alexander Ustinov",
-      "email": "rusfearuth@gmail.com"
-    }
-  ],
   "deprecated": false,
-  "description": "A React Native module that allows you to use native UI to select media from the device library or directly from the camera",
-  "homepage": "https://github.com/marcshilling/react-native-image-picker#readme",
+  "description": "A React Native module  Android 身份证号码识别 （本地，在线，实时）",
+  "homepage": "https://github.com/ribuluo000/IDCardRecognition#readme",
   "keywords": [
     "react-native",
-    "react-native-image-picker",
+    "react-native-IDRecognition",
     "react",
-    "native",
-    "image",
-    "picker"
+    "native"
   ],
   "main": "index.js",
-  "name": "react-native-image-picker",
+  "name": "react-native-IDRecognition",
   "nativePackage": true,
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/marcshilling/react-native-image-picker.git"
+    "url": "git+https://github.com/ribuluo000/IDCardRecognition.git"
   },
-  "scripts": {
-    "prepublish": "rm -rf android/build Example/android/build Example/android/app/build node_modules"
-  },
-  "types": "./index.d.ts",
-  "version": "0.26.2"
+  "version": "0.0.1"
 }
