--- a/android/build.gradle
+++ b/android/build.gradle
@@ -29,7 +29,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
     defaultConfig {
-        applicationId "com.arseeds.idcard"
+        applicationId "com.nick.idcard"
         minSdkVersion 18
         targetSdkVersion 21
         versionCode 1
