--- a/example/TestCamera/android/app/build.gradle
+++ b/example/TestCamera/android/app/build.gradle
@@ -157,6 +157,7 @@ compileSdkVersion rootProject.hasProperty('compileSdkVersion') ? rootProject.com
 }
 
 dependencies {
+    compile project(':react-native-IDRecognition')
 
 def googlePlayServicesVersion = rootProject.hasProperty('googlePlayServicesVersion')  ? rootProject.googlePlayServicesVersion : DEFAULT_GOOGLE_PLAY_SERVICES_VERSION
   def supportLibVersion = rootProject.hasProperty('supportLibVersion')  ? rootProject.supportLibVersion : DEFAULT_SUPPORT_LIBRARY_VERSION
@@ -181,6 +182,7 @@ compile (project(':react-native-camera')) {
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
+//    compile project(path: ':react-native-idrecognition')
 }
 
 // Run this once to be able to run the application with BUCK
