--- a/example/TestCamera/android/settings.gradle
+++ b/example/TestCamera/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'TestCamera'
-include ':react-native-camera'
+include ':react-native-IDRecognition'
+project(':react-native-IDRecognition').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-IDRecognition/android')
+include ':react-native-camera', ':mylibrary', ':react-native-idrecognition'
 project(':react-native-camera').projectDir = new File(rootProject.projectDir, 	'../node_modules/react-native-camera/android')
 include ':app'
